<?xml version="1.0"?>
<package format="2">
  <name>range_and_bearing</name>
  <version>0.0.0</version>
  <description>The range_and_bearing package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>project11</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>project11</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>project11</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

